Name:                ainsyl
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Young Gyu Park
Maintainer:          ygpark2@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Development mode
  Default: False

Executable post
  hs-source-dirs: src
  main-is: Post.hs

  Build-depends:
    base >= 4.8.2.0 && < 5,
    cmdargs >= 0.10.14 && < 0.11,
    template >= 0.2.0.10 && < 0.3

  if flag(development)
      cpp-options: -DDEVELOPMENT
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind
  else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind

Executable ainsyl
  hs-source-dirs: src
  main-is: Site.hs

  other-modules:
    XmlHtmlWriter

  Build-depends:
    base >= 4.8.2.0 && < 5,
    blaze-builder >= 0.4 && < 0.5,
    containers >= 0.5 && < 0.6,
    filepath >= 1.4 && < 1.5,
    hakyll >= 4.12.4.0 && < 5.0,
    mtl >= 2.2.1 && < 3,
    pandoc >= 1.16 && < 1.18,
    regex-compat >= 0.95.1,
    tagsoup >= 0.13.1 && < 0.14,
    text >= 1.2.2.1 && < 1.3,
    time >= 1.6 && < 1.7,
    xmlhtml >= 0.2.3 && < 0.3

  if flag(development)
      cpp-options: -DDEVELOPMENT
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind
  else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind

Executable server
  hs-source-dirs: src
  main-is: Server.hs

  Build-depends:
    attoparsec                >= 0.13.1.0 && < 0.14,
    base                      >= 4.8.2.0 && < 5,
    bytestring                >= 0.9 && < 0.11,
    directory                 >= 1.1 && < 1.3,
    MonadCatchIO-transformers >= 0.3.1.3 && < 0.4,
    mtl                       >= 2.2.1 && < 3,
    process                   >= 1.1 && < 1.5,
    snap-core                 >= 1.0.0.0 && < 2.0,
    snap-server               >= 1.0.1.0 && < 2.0,
    system-filepath           == 0.4.*,
    transformers              >= 0.4 && < 0.6,
    unix-compat               >= 0.4.2.0 && < 0.5,
    unordered-containers      >= 0.2.7.1 && < 0.3,
    utf8-string               >= 1.0.1.1 && < 1.5

  if flag(development)
      cpp-options: -DDEVELOPMENT

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
