name:               hakyll-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:    base >= 4.7 && < 5
                  , hakyll >= 4.9 && < 5
                  , pandoc
  default-language: Haskell2010
